# AiCad

./: .gitignore  CAD_AI_System_Design 1.html  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  example.json  model.json  model2.json  model3.json  ninja_path.txt  piramida.stl  ps line count  settings.json
assets/env/: imgui_layout.ini
cmake/: CompilerFlags.cmake  FindOCCT.cmake
docs/: Integracja_pikera+ImGui_UI.md  Integracja_pikera_prompty.md  Prompty_1.md  ai_change_governance.md  budowanie.md  call_map.js  index.html  llm_api_guide.md  model_schema.md  src_function_call_map.html  src_function_call_map.md  src_function_walkthrough_1_application_lifecycle.md  src_function_walkthrough_2_rebuild_pipeline.md  src_function_walkthrough_3_sketch_solver.md  src_function_walkthrough_4_model_io.md  src_function_walkthrough_5_camera_viewport_ui.md
docs/manus/: Architektura_Systemu_CAD_klasy_CATIA_Przewodnik_Projektowy.docx  Interakcja_w_Systemie_CAD_Selekcja,_Manipulacja_i_Kamera.docx
src/: main.cpp
src/ai/: ChangeProposal.hpp  LlmConfig.hpp
src/app/: Application.cpp  Application.hpp  GeometryIpc.cpp  GeometryIpc.hpp  Window.cpp  Window.hpp
src/core/: ExpectedCompat.hpp
src/geometry/: FallbackKernel.cpp  FallbackKernel.hpp  GeometryThreadPool.cpp  GeometryThreadPool.hpp  IGeometryKernel.hpp  OcctKernel.cpp  OcctKernel.hpp
src/git/: LocalRepoManager.cpp  LocalRepoManager.hpp
src/io/: CameraSession.cpp  CameraSession.hpp  ModelDeserializer.cpp  ModelDeserializer.hpp  ModelSerializer.cpp  ModelSerializer.hpp
src/model/: FeatureNode.hpp  FeatureTree.cpp  FeatureTree.hpp  Plane.hpp
src/renderer/: RenderFrame.cpp  RenderFrame.hpp  VulkanContext.cpp  VulkanContext.hpp  VulkanHandles.hpp
src/scene/: Camera.cpp  Camera.hpp
src/sketch/: Plane.hpp  SketchConstraint.hpp  SketchDocument.cpp  SketchDocument.hpp  SketchEntity.cpp  SketchEntity.hpp  SketchPlane.hpp  SketchSolver.cpp  SketchSolver.hpp  SketchView.cpp  SketchView.hpp
src/ui/: FeatureTreePanel.cpp  FeatureTreePanel.hpp  Panel.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  ViewportPanel.cpp  ViewportPanel.hpp
tests/: CMakeLists.txt  test_json_roundtrip.cpp
